# copper-hollow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ralph.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  gemini-review.yml.disabled
.ralph/: backlog.json  metrics.json  reviewers.json  status.json
.ralph/prompts/: monitor.md  orchestrator.md  planner.md  researcher.md  reviewer.md  worker.md
docs/: KICKOFF.md  midi-programming-techniques.md
docs/architecture/: BRIDGE_PROTOCOL.md  DATA_MODEL.md
docs/bitwig/: BITWIG_EXTENSION.md
docs/cli/: CLI_SPEC.md
docs/engine/: ARRANGEMENT.md  BASS.md  DRUMS.md  MELODY.md  RHYTHM.md  THEORY.md
docs/gui/: GUI_SPEC.md
docs/reference/: DEFAULTS.md
src/: main.rs  midi_export.rs  state.rs
src/bridge/: mod.rs  protocol.rs
src/cli/: commands.rs  mod.rs
src/engine/: arrangement.rs  bass.rs  composer.rs  drums.rs  melody.rs  mod.rs  pads.rs  rhythm.rs  song.rs  theory.rs
src/gui/: app.rs  header.rs  mod.rs  pattern_view.rs  theme.rs  tracks.rs  widgets.rs
tests/: cli_integration.rs
tools/gemini-image/: gemini_image.py
tools/gemini-reviewer/: review.py
