[package]
name = "copper-hollow"
version = "0.3.0"
edition = "2021"
description = "Folk/indie/alt-country MIDI composition engine"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
midly = "0.5"
rand = "0.10"
rand_chacha = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
